welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:12: error: not found: value i
		case j if i<=2 =>droite();
                          ^Poucet:14: error: not found: value i
		case j if i>=3 =>gauche();
                          ^