welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbB = 0
do{
	avance()
	for (i<- 1 to 4){
		if (estSurBiscuit()){
			nbB = nbB + 1
		}
		avance()
	}
	nbB match{
		case j if i<=2 =>droite();
			
		case j if i>=3 =>gauche();
	}
} while (!sortieTrouvee())
